--- a/build.gradle
+++ b/build.gradle
@@ -22,6 +22,8 @@ repositories {
     mavenCentral()
 }
 
+def webdrivermanagerVersion = "5.6.3"
+
 dependencies {
     testImplementation('org.junit.jupiter:junit-jupiter:5.9.3')
     testImplementation('com.codeborne:selenide:6.19.1')
@@ -29,18 +31,25 @@ dependencies {
     testImplementation('org.slf4j:slf4j-log4j12:2.0.14')
     testCompileOnly('org.projectlombok:lombok:1.18.38')
     testAnnotationProcessor('org.projectlombok:lombok:1.18.38')
+    testImplementation('org.aeonbits.owner:owner:1.0.4')
+    testImplementation("io.github.bonigarcia:webdrivermanager:$webdrivermanagerVersion")
 }
 
 tasks.withType(JavaCompile) {
     options.encoding = 'UTF-8' // без этой настройки могут возникать проблемы с кодировкой, если в коде есть кириллица
 }
 
-tasks.withType(Test) {
-    useJUnitPlatform()
-}
-
 tasks.withType(Test).configureEach {
-    systemProperty "remoteLaunch", System.getProperty("remoteLaunch", "false")
+    useJUnitPlatform()
+
+    systemProperties(System.getProperties())
+
+    testLogging {
+        lifecycle {
+            events "started", "skipped", "failed", "standard_error", "standard_out"
+            exceptionFormat "short"
+        }
+    }
 }
 
 tasks.register('smoke', Test) {
