--- a/build.gradle
+++ b/build.gradle
@@ -8,11 +8,11 @@ allure {
         version.set('2.34.1')
     }
     adapter {
-        aspectjWeaver.set(true) // это чтобы работало @Step
+        aspectjWeaver.set(true)
         frameworks {
             junit5 {
                 adapterVersion.set('2.29.1')
-                enabled.set(true) // явно включает адаптер , рекомендуется указывать
+                enabled.set(true)
             }
         }
     }
@@ -25,6 +25,7 @@ repositories {
 def webdrivermanagerVersion = "5.6.3"
 
 dependencies {
+    testImplementation("io.github.bonigarcia:webdrivermanager:$webdrivermanagerVersion")
     testImplementation('org.junit.jupiter:junit-jupiter:5.9.3')
     testImplementation('com.codeborne:selenide:6.19.1')
     testImplementation('io.qameta.allure:allure-selenide:2.19.0')
@@ -32,11 +33,11 @@ dependencies {
     testCompileOnly('org.projectlombok:lombok:1.18.38')
     testAnnotationProcessor('org.projectlombok:lombok:1.18.38')
     testImplementation('org.aeonbits.owner:owner:1.0.12')
-    testImplementation("io.github.bonigarcia:webdrivermanager:$webdrivermanagerVersion")
+    testImplementation('com.codeborne:pdf-test:1.5.0')
 }
 
 tasks.withType(JavaCompile) {
-    options.encoding = 'UTF-8' // без этой настройки могут возникать проблемы с кодировкой, если в коде есть кириллица
+    options.encoding = 'UTF-8'
 }
 
 tasks.withType(Test).configureEach {
