--- a/build.gradle
+++ b/build.gradle
@@ -22,13 +22,14 @@ repositories {
     mavenCentral()
 }
 
-def webdrivermanagerVersion = "5.6.3"
+def webdrivermanagerVersion = "5.6.3",
+    allureVersion = "2.21.0"
 
 dependencies {
     testImplementation("io.github.bonigarcia:webdrivermanager:$webdrivermanagerVersion")
     testImplementation('org.junit.jupiter:junit-jupiter:5.9.3')
     testImplementation('com.codeborne:selenide:6.19.1')
-    testImplementation('io.qameta.allure:allure-selenide:2.19.0')
+    testImplementation("io.qameta.allure:allure-selenide:$allureVersion")
     testImplementation('org.slf4j:slf4j-log4j12:2.0.14')
     testCompileOnly('org.projectlombok:lombok:1.18.38')
     testAnnotationProcessor('org.projectlombok:lombok:1.18.38')
